--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,43 @@
+!DOCTYPE html>
+<html>
+<head>
+    <title>Module 2 Assignment</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
 
+    <h1>Our Menu</h1>
+
+    <div class="row">
+        <section class="col-lg-4 col-md-6" >
+            <div class="dish"> 
+                <div class="dish-title" id="dish-title-1"> Chiken </div>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+            </div>
+        </section>
+        <section class="col-lg-4 col-md-6">
+            <div class="dish">
+                <div class="dish-title" id="dish-title-2"> Beef </div>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+            </div>
+        </section>
+        
+        <section class="col-lg-4 col-md-12">
+            <div class="dish">
+                <div class="dish-title" id="dish-title-3"> Sushi </div>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+            </div>
+        </section>
+    </div>  
+    
+   </body>
+</html>
